# pomodoro-todo

./: .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  server.js  tasks.db
.history/app/: page_20251029202959.tsx  page_20251029203954.tsx  page_20251029204207.tsx  page_20251029204831.tsx  page_20251029204914.tsx  page_20251029205023.tsx  page_20251029205331.tsx  page_20251029205445.tsx  page_20251029205502.tsx  page_20251029210822.tsx  page_20251029210852.tsx  page_20251029211715.tsx  page_20251029212625.tsx  page_20251029213247.tsx  page_20251029213312.tsx  page_20251029213418.tsx  page_20251030141458.tsx  page_20251030141541.tsx  page_20251030141757.tsx  page_20251030142035.tsx  page_20251030142114.tsx  page_20251030142155.tsx  page_20251030142310.tsx  page_20251030142504.tsx  page_20251030142526.tsx  page_20251030142826.tsx  page_20251030142831.tsx  page_20251030143308.tsx  page_20251030143433.tsx  page_20251030143814.tsx  page_20251030144547.tsx  (+16 more)
app/: globals.css  page.tsx
components/: Icons.tsx  LanguageSwitcher.tsx  Sidebar.tsx  SyncStatus.tsx  TaskTable.tsx  quran-player.tsx
data/: tasks.db  tasks.db-shm  tasks.db-wal
hooks/: use-enhanced-pomodoro.ts  use-pomodoro.ts  useGoogleSync.ts  usePrayerTimes.ts  useTasks.ts  useTimer.ts
i18n/: config.ts  request.ts
lib/: db.ts  prayer-times.ts  tauri-commands.ts
messages/: ar.json  en.json  fr.json
scripts/: download-node-binary.js  prepare-tauri-build.js
src-tauri/: Cargo.toml  prayerflow.db  tauri.conf.json
src-tauri/src/: main.rs
types/: index.ts  praytime.d.ts
(+35 files in other folders)
